outputs.OLD/production-metadata/HEAL-33054/unpackaged/unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Card</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND (2 OR 3)) OR 4</booleanFilter>
            <errorMessage>Credit Card must be Active and associated with an Account</errorMessage>
            <filterItems>
                <field>Credit_Card__c.Credit_Card_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Credit_Card__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Credit_Card__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Financial_Responsible_Party__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Id</field>
                <operation>equals</operation>
                <value>00e0b000001iU5h</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Credit_Card__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Year_Date__c</fullName>
        <formula>TEXT(YEAR(Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEA_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DEA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Pharm_Products_Count__c</fullName>
        <label>DS Pharm Products Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_Medication_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <label>Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliver_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deliver Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>This field is used if we get an error message from the GeneTest Submission call via API</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Account.Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Attribute_Id__c</fullName>
        <description>This will come from Shopify for the attribuited user that was apart the sale. This will then be used in SF automation to fill in the Referred By field</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Attribute Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Customer_ID__c</fullName>
        <description>This field is used to track the customer ID used in Stripe/shopify/crowdpoint etc..</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Customer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Invoice_ID__c</fullName>
        <description>Used to track the Invoice ID from Stripe/shopify/crowdpoint etc..</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Invoice ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Lab_Id__c</fullName>
        <description>﻿The API will update this field when CSS Sends out the Kit.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Lab Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Payment_ID__c</fullName>
        <description>This field is used to track the payment method ID used in Stripe/shopify/crowdpoint etc..</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External_Payment_ID</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Seller_Id__c</fullName>
        <description>This will come from Shopify for the specific seller that did the sale. This will then be used in SF automation to fill in the Owner Id field</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Seller Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Subscription_ID__c</fullName>
        <description>This field is used to track the subscription ID used in Stripe/shopify/crowdpoint etc..</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Subscription ID</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRP_Receipt_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FRP Receipt Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Financial_Responsible_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Responsible Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funded Opportunities</relationshipLabel>
        <relationshipName>SponsoredServices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Keyword__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Shipping_Company__c</fullName>
        <label>1st Shipping Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fedex</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
                <value>
                    <fullName>DHL eCommerce</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Shipping_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>1st Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Tracking_Num__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>1st Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Tracking_URL__c</fullName>
        <formula>IF(
 TEXT(First_Shipping_Company__c) = &quot;Fedex&quot;,
 &quot;https://www.fedex.com/apps/fedextrack/index.html?tracknumbers=&quot; + First_Tracking_Num__c + &quot;&amp;cntry_code=us&quot;,

 IF(
  TEXT(First_Shipping_Company__c) = &quot;UPS&quot;,
  &quot;https://www.ups.com/track?loc=en_US&amp;tracknum=&quot; + First_Tracking_Num__c + &quot;&amp;requester=WT/trackdetails&quot;,

  IF(
   TEXT(First_Shipping_Company__c) = &quot;USPS&quot;,
   &quot;https://tools.usps.com/go/TrackConfirmAction?tRef=fullpage&amp;tLc=2&amp;text28777=&amp;tLabels=&quot; + First_Tracking_Num__c,

   IF(
    TEXT(First_Shipping_Company__c) = &quot;DHL eCommerce&quot;,
    &quot;https://www.dhl.com/us-en/home/tracking.html?tracking-id=&quot; + First_Tracking_Num__c,

    NULL
   )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Tracking URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Lab_Date__c</fullName>
        <formula>Account.Follow_Up_Lab_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow Up Lab Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Free_PGT_Book_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free PGT Book Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GT_Results_Opened_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GT Results Opened On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Genetic_Test_ReShip_Attempt__c</fullName>
        <label>Genetic Test ReShip Attempt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Genetic_Test_Rejection_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Genetic Test Rejection Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Genetic_Test_Request_Id__c</fullName>
        <formula>IF( ISPICKVAL(Transaction_Source__c, &quot;Affiliate&quot;), &quot;AFF&quot;, IF( ISPICKVAL(Transaction_Source__c, &quot;Licensee/POS&quot;), &quot;LIC&quot;, &quot;10x&quot;))
+ CASESAFEID(Id) + &quot;__&quot; + CASESAFEID(AccountId) + IF(ISNULL(Genetic_Test_ReShip_Attempt__c), &quot;&quot;, &quot;__&quot; + TEXT(Genetic_Test_ReShip_Attempt__c))</formula>
        <label>Genetic Test Request Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genetic_Testing_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Genetic Testing Promotion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Promotions__c.Promotion_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Promotions__c.Genetic_Testing_Promotion_Lookup__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Promotions__c</referenceTo>
        <relationshipLabel>Opportunities (Genetic Testing Promotion)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HASH_Close_Date_Amount__c</fullName>
        <formula>VALUE(
      TEXT(YEAR(CloseDate)) &amp;
      LPAD(TEXT(MONTH(CloseDate)), 2, &quot;0&quot;) &amp;
      LPAD(TEXT(DAY(CloseDate)), 2, &quot;0&quot;) &amp;
      LPAD(TEXT(Amount), 10, &quot;0&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HASH Close Date &amp; Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasFRP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is set and the account is also changed an related automation will set the FRP field.</description>
        <label>HasFRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hormone_Evaluation_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hormone Evaluation Promotion</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Promotions__c.Promotion_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Promotions__c.Promotion_Lookup__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Promotions__c.Initial_HRT_Lookup__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Promotions__c</referenceTo>
        <relationshipLabel>Opportunities (Hormone Evaluation Promotion)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Results_Delivery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Results Delivery</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <formula>Transaction_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <formula>CASE(TEXT(Net_Payment_Terms__c), 
							&apos;Net 7&apos;, CreatedDate + 7, 
							&apos;Net 15&apos;, CreatedDate + 15, 
							&apos;Net 30&apos;, CreatedDate + 30, 
							&apos;Net 45&apos;, CreatedDate + 45, 
							null )</formula>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <displayFormat>IN{000000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IsSupplement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Supplement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Invoice__c</fullName>
        <formula>OR(Opportunity_Balance_Due__c&gt;0, IsWon)</formula>
        <label>Is Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_in_last_one_year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is in last one year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issues_Founded__c</fullName>
        <formula>IF(
     INCLUDES(Account.Issues__c , &quot;Difficult Person&quot;),
     IMAGE(&quot;img/msg_icons/error16.png&quot;, &quot;Difficult Person&quot;),
     null
) &amp; &quot; &quot; &amp;
IF(
     INCLUDES(Account.Issues__c , &quot;Refund&quot;),
     IMAGE(&quot;img/msg_icons/error16.png&quot;, &quot;Refund&quot;),
     null
) &amp; &quot; &quot; &amp;
IF(
     INCLUDES(Account.Issues__c , &quot;Chargeback&quot;),
     IMAGE(&quot;img/msg_icons/error16.png&quot;, &quot;Chargeback&quot;),
     null
)
&amp; &quot; &quot; &amp;
IF(
     INCLUDES(Account.Issues__c , &quot;See Notes&quot;),
     IMAGE(&quot;img/msg_icons/error16.png&quot;, &quot;See Notes&quot;),
     null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issues Founded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issues_Type__c</fullName>
        <formula>IF(INCLUDES(Account.Issues__c , &apos;Difficult Person&apos;),&quot;Difficult Person; &quot;, null) +
IF( INCLUDES( Account.Issues__c , &apos;Refund&apos;),&quot;Refund; &quot;, null) +
IF( INCLUDES(Account.Issues__c, &apos;Chargeback&apos;), &apos;Chargeback; &apos;, null) +
IF( INCLUDES(Account.Issues__c, &apos;See Notes&apos;), &apos;See Notes&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issues Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JotForm_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>JotForm ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Id__c</fullName>
        <description>There are 2 places where this number will be populated.
When creating an &quot;in person&quot; GT opp in Shopify, we will be sending this KitID along in the Opportunity we create in SF.
When creating a &quot;virtual&quot; GT Opp in Shopify, we will NOT be sending this KitID in the creation of the Opportunity (hence it needs to allow for null) but rather, when the Lab sends us the &quot;tracking information&quot; via the REST API, they will provide both the tracking numbers (Fedex numbers for example) plus this KitID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Kit Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Received_by_Cell_Science__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Kit Received by Lab</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kit_provided_or_shipped_to_patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kit provided or shipped to patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LabOrderDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lab_Appointment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lab_Appointment_Time__c</fullName>
        <label>Lab Appointment Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Lab_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lab Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lab Account Record Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Lab Name)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lab_Order_Request_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Lab Order Request Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lab_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lab_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lab Promotion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Promotions__c.Promotion_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Promotions__c.Lab_Promotion_Lookup__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Promotions__c</referenceTo>
        <relationshipLabel>Opportunities (Lab Promotion)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lab_Provider_Name__c</fullName>
        <formula>TEXT( Lab_Provider__r.Lab__c )</formula>
        <label>Lab Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lab who is processing this opportunity.</description>
        <label>Lab Provider</label>
        <referenceTo>Lab_Provider__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lab_State__c</fullName>
        <label>Lab State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
                <value>
                    <fullName>New Mexico</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lab_Street_Adrees__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab Street Adrees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Annual_Lab_Date__c</fullName>
        <formula>Account.Last_Annual_Lab_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Annual Lab Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Annual_Physical__c</fullName>
        <formula>Account.Last_Annual_Physical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Annual Physical</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Follow_up__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Follow up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Nurture_Email_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Nurture Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Scheduled_Date__c</fullName>
        <description>This has the latest appointment scheduled date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Latest Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_to_1st_CloseWon_Sales_Cycle__c</fullName>
        <formula>TEXT( 
FLOOR(Opp_Closed_Date_Time__c  -  Account.Lead_Created_Date_Time__c) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
FLOOR(MOD((Opp_Closed_Date_Time__c  -  Account.Lead_Created_Date_Time__c)*24,24)) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((Opp_Closed_Date_Time__c  -  Account.Lead_Created_Date_Time__c)*1440,60),0) 
) &amp;&quot; Minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead to 1st CloseWon Sales Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aventura</fullName>
                </value>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>Naples</fullName>
                </value>
                <value>
                    <fullName>Scottsdale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Practitioner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Account_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Affiliate Doctor Account Record Type</value>
            </filterItems>
            <filterItems>
                <field>Account.Practice_Group__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Main Practicioner)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matching_Account_from_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will store the Account that was identified as matching the Lead record prior to converting into an Opportunity. It will store a value only if the Opportunity is created from Lead Conversion AND the Lead record converted had a Matching Account identified by system logic. It is used to set the Opportunity Owner as the same Owner of the Lead Matching Account in that scenario only.</description>
        <label>Matching Account from Lead</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Matching Account from Lead)</relationshipLabel>
        <relationshipName>Matching_Lead_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Consultation_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Consultation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Consultation_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medical Consultation Promotion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Promotions__c.Promotion_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Promotions__c.Medical_Consultation_Promotion_Lookup__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Promotions__c</referenceTo>
        <relationshipLabel>Opportunities (Medical Consultation Promotion)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Consultation_Scheduled_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Consultation Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Consultation_Scheduled_Time__c</fullName>
        <label>Medical Consultation Scheduled Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Medical_Consultation_Visit_Type__c</fullName>
        <label>Medical Consultation Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>VSEE</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>